# py-unicode-segmentation

./: .gitignore  Cargo.toml  Makefile
src/: extractors.rs  extractors_bindings.rs  lib.rs  test_extractors.rs
